--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Hello, World!</title>
+    <title>Hello</title>
 </head>
 <body>
 <h1 th:text="'Hello, ' + ${user} + '!'"></h1>
